@@ -1,4 +1,4 @@
-$Id: README 35661 2014-11-25 08:47:42Z peter $
+$Id: README 35886 2014-12-23 09:31:54Z peter $
 Public domain.  Originally written 2005 by Karl Berry.
 
 Extra utilities we (optionally) compile for TeX Live.
@@ -8,6 +8,8 @@ asymptote 2.31 - checked 17may14
   update to TL from CTAN, to include prebuilt doc.
   see http://tug.org/texlive/build.html#asymptote
   and tlpkg/bin/tl-update-asy
+
+devnag - from devanagari package installed in texmf-dist.
 
 m-tx 0.60d - checked 16apr12
   http://mirror.ctan.org/support/m-tx/
